completed with spec which forces to complier to implement methods

--- a/employee-management-spec/pom.xml
+++ b/employee-management-spec/pom.xml
@@ -90,12 +90,24 @@
                         </goals>
                         <configuration>
                             <inputSpec>${project.basedir}/src/main/resources/apis/client-api-v1-spec.yml</inputSpec>
+                            <output>${project.build.directory}/generated-sources/openapi</output>
                             <generatorName>spring</generatorName>
                             <!-- depends upon this package names automatically generates models and apis packages -->
                             <apiPackage>com.example.employee.api</apiPackage>
                             <modelPackage>com.example.employee.model</modelPackage>
+                            <strictSpec>true</strictSpec>
                             <configOptions>
-                                <sourceFolder>target</sourceFolder>
+                                <controllerThrowsExceptions>java.io.IOException,com.example.NotFoundException</controllerThrowsExceptions>
+                                <skipDefaultInterface>true</skipDefaultInterface>
+                                <useBeanValidation>true</useBeanValidation>
+                                <useClassLevelBeanValidation>false</useClassLevelBeanValidation>
+                                <useTags>true</useTags>
+                                <java8>true</java8>
+                                <useOptional>false</useOptional>
+                                <hideGenerationTimestamp>true</hideGenerationTimestamp>
+                                <dateLibrary>java8</dateLibrary>
+                                <bigDecimalAsString>true</bigDecimalAsString>
+                                <useBeanValidation>true</useBeanValidation>
                                 <interfaceOnly>true</interfaceOnly>
                                 <generateInterfaces>true</generateInterfaces>
                                 <useSpringBoot3>true</useSpringBoot3>
@@ -104,7 +116,6 @@
                                 <publicMethods>true</publicMethods>
                             </additionalProperties>
                             <!-- Fix output directory structure -->
-                            <output>${project.build.directory}/generated-sources/openapi</output>
                         </configuration>
                     </execution>
                 </executions>
