--- a/employee-management-service/src/main/resources/application.yaml
+++ b/employee-management-service/src/main/resources/application.yaml
@@ -1,7 +1,10 @@
 server:
-  port: 8080
+  port: 8081
 
 spring:
+  profiles:
+    active:
+      - true
   datasource:
     url: jdbc:h2:mem:employeeDb
     driver-class-name: org.h2.Driver
@@ -27,4 +30,9 @@ spring:
 
 logging:
   level:
-    root: info
+    com.employee_management_service: DEBUG
+    org.springframework: INFO
+    org.hibernate: INFO
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
